--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "dotenv": "^16.0.1",
     "lodash": "^3.10.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
-    "redux": "4.0.0"
+    "react-scripts": "^5.0.1",
+    "redux": "4.0.0",
+    "youtube-api-search": "^0.0.5"
   }
 }
